# data-1cijferho-py

./: README.md  architecture.md  pyproject.toml
data/: overview_files.csv
src/backend/: convert_EV.py  converter.py  extractor.py  extractor_ash.py  extractor_bb.py  extractor_bbdec.py  extractor_tomer.py  extractor_vak.py  run.py
