[project]
name = "streamlit-app-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastexcel>=0.12.1",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "polars>=1.21.0",
    "rich>=13.9.4",
    "streamlit>=1.41.1",
]
